# Sample-Agents

Assistive/: .gitignore  README.md
Assistive/TravelAgent/: package.json
Assistive/TravelAgent/src/: index.ts
Assistive/TravelAgentDW/: .gitignore  ToolingManifest.json  package.json  tsconfig.json
Assistive/TravelAgentDW/src/: agent.ts  client.ts  index.ts  mcp-tool-service.ts
Assistive/dotnet-agentframework-assistive/: AspNetExtensions.cs  Program.cs  WeatherAgent.csproj  appsettings.json
Assistive/dotnet-agentframework-assistive/Agent/: WeatherAgentApp.cs
Assistive/dotnet-agentframework-assistive/Tools/: WeatherLookupTool.cs
Assistive/nodejs-langchain-assistive/: .env.example  package-lock.json  package.json  tsconfig.json
Assistive/nodejs-langchain-assistive/src/: index.ts
Assistive/python-openai-assistive/: .env.example  main.py  pyproject.toml
Assistive/python-openai-assistive/agent/: weather_agent.py
Assistive/python-openai-assistive/tools/: weather_lookup.py
Autonomous/: .gitignore  README.md
Autonomous/dotent-agentframework-auto/: AspNetExtensions.cs  Program.cs  WeatherAgent.csproj  WeatherMonitorService.cs  appsettings.json  weather-agent.sln
Autonomous/dotent-agentframework-auto/Agent/: WeatherAgentApp.cs
Autonomous/dotent-agentframework-auto/Properties/: launchSettings.json
Autonomous/dotent-agentframework-auto/Tools/: WeatherLookupTool.cs
Autonomous/nodejs-langchain-auto/: .env.example  package-lock.json  package.json
Autonomous/python-openai-auto/: main.py  pyproject.toml  requirements.txt
(+12 files in other folders)
